--- a/gs-accessing-data-mongodb-master/complete/pom.xml
+++ b/gs-accessing-data-mongodb-master/complete/pom.xml
@@ -39,6 +39,15 @@
 			<version>2.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+		<!-- https://mvnrepository.com/artifact/javax.inject/javax.inject -->
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+		</dependency>
+
+
 
 	</dependencies>
 
