--- a/gs-accessing-data-mongodb-master/complete/src/main/resource/application.properties
+++ b/gs-accessing-data-mongodb-master/complete/src/main/resource/application.properties
@@ -6,3 +6,6 @@ spring.data.mongodb.database=alloy-poc
 #logging
 logging.level.org.springframework.data=debug
 logging.level.=error
+
+server.port=8083
+server.servlet.context-path=/my-app
